# aligator-swk

./: .gitignore  AGENTS.md
dual-FFSR_ProxDDP/: CMakeCache.txt  CMakeLists.txt  DartConfiguration.tcl  README.md  config.h  main.py  main2.py  main3.py  test_convex_hull_FCL.cpp  test_convex_hull_FCL.py
dual-FFSR_ProxDDP/cmake/: cmake_reinstall.cmake.configured  cmake_uninstall.cmake
dual-FFSR_ProxDDP/include/aligator/: config.hpp  deprecated.hpp  tracy.hpp  warning.hpp
dual-FFSR_ProxDDP/xml/: applyFT.xml  base_link.STL  constraint.xml  dual_arm_space_robot.xml  dual_arm_space_robot_add_object.xml  link0.STL  link1.STL  link2.STL  link3.STL  link4.STL  link5.STL  link6.STL  link7.STL  materials.xml  test_weld_constraint.xml  visual.xml  visual_circle.xml
examples/: double_pendulum.py  flexible_double_pendulum.py  mujoco_sim_env.py  panda_mujoco_test.py  panda_mujoco_test_se3.py  panda_mujoco_test_se3_collision.py  quadrotor_obstacles.py  talos_arms.py  ur10_ballistic.py  ur5_croco.py  ur5_reach.py  ur5_table_halfspace.py
franka_emika_panda/: mjx_panda_nohand.xml  panda_nohand.xml  scene.xml
